--- a/app/views/gossip/show.html.erb
+++ b/app/views/gossip/show.html.erb
@@ -2,4 +2,4 @@
 
 <p>Contenu du : <%= Gossip.find(@id).content %></p>
 
-<button><a href="/user/<%= Gossip.find(@id).user_id %>" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Lien du profil</a></button>
+<button><a href="/user/<%= Gossip.find(@id).user_id %>" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Profil</a></button>
